--- a/BlazorApp/Components/Pages/Login.razor
+++ b/BlazorApp/Components/Pages/Login.razor
@@ -35,14 +35,7 @@
             text-align: center;
         }
 
-        input[type="text"], input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 3px solid black;
-            border-radius: 50px;
-            box-sizing: border-box;
-        }
+        
 
         input[type="submit"] {
             width: 100%;
@@ -65,8 +58,8 @@
 <div class="container">
     <h1>Login</h1>
     <form @onsubmit="@_Login">
-        <input type="text" name="email" placeholder="Email" @bind="email" required>
-        <input type="password" name="password" placeholder="Password" @bind="password" required>
+        <input class="input-SignUp" type="text" name="email" placeholder="Email" @bind="email" required>
+        <input class="input-SignUp" type="password" name="password" placeholder="Password" @bind="password" required>
         <br><br/>
         <button type="submit" class="btn btn-primary">Login</button>
         <p><a href="/SignUp">Create an account</a></p>
