--- a/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/wwwroot/app.css
@@ -38,11 +38,17 @@ a, .btn-link {
 }
 
 .input-SignUp {
-    width: 250px; /* Adjust width as needed */
+    /*width: 250px; Adjust width as needed */
     border: solid;
     border-radius: 50px;
     border-color: rgb(183, 183, 183);
+    
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    box-sizing: border-box;
 }
+
 
 
 .content {
