--- a/BlazorApp/Components/Pages/SignUp.razor
+++ b/BlazorApp/Components/Pages/SignUp.razor
@@ -5,6 +5,7 @@
 @using DataAccessLibrary
 @inject IProfileData _db
 
+@rendermode InteractiveServer
 
 
 
@@ -31,43 +32,54 @@
 </EditForm>
 **@
           
-<form method="post" @onsubmit="InsertProfile">
+<Form>
 
     <table class="input-table" style="border-collapse: collapse; border-spacing: 0;">
         <tr>
 
-            <td ><InputText placeholder="Email" class="input-SignUp" @bind-Value="newProfile.Email"/></td>
+            <td ><InputText placeholder="Email" class="input-SignUp" @bind-Value="localEmail"/></td>
         </tr>
         <tr>
 
-            <td><InputText placeholder="Username" class="input-SignUp" @bind-Value="newProfile.Username"/></td>
+            <td><InputText placeholder="Username" class="input-SignUp" @bind-Value="localUserName"/></td>
         </tr>
         <tr>
 
-            <td><InputText placeholder="City" class="input-SignUp" @bind-Value="newProfile.City"/></td>
+            <td><InputText placeholder="City" class="input-SignUp" @bind-Value="localCity"/></td>
         </tr>
         <tr>
-            <td><InputText placeholder="State" class="input-SignUp" @bind-Value="newProfile.State"/></td>
+            <td><InputText placeholder="State" class="input-SignUp" @bind-Value="localState"/></td>
 
         </tr>
         <tr>
 
-            <td><InputText placeholder="School Name" class="input-SignUp" @bind-Value="newProfile.SchoolName"/></td>
+            <td><InputText placeholder="School Name" class="input-SignUp" @bind-Value="localSchoolName"/></td>
         </tr>
+        <tr>
+        
+            <td><InputText placeholder="Password" class="input-SignUp" @bind-Value="passwordTemp1"/></td>
+        </tr>
+        <tr>
+        
+                    <td><InputText id="confirmPass" placeholder=@confirmPass class="input-SignUp" @bind-Value="passwordTemp2"/></td>
+                </tr>
         <tr>
 
             <td colspan="2" style="text-align: center;"><!-- Adjust colspan as necessary -->
-                <button class="btn btn-primary" @onclick="InsertProfile" type="submit">Submit</button>
+                <button class="btn btn-primary" @onclick="CheckPasswords" >Submit</button>
             </td>
         </tr>
     </table>
 
-</form>
+</Form>
 
 
 </body> 
 
 @code {
+    
+    
+    private string localEmail, localUserName, localCity, localState, localSchoolName, passwordTemp1, passwordTemp2;
     private List<ProfileModel> profile;
     private DisplayProfileModel newProfile = new DisplayProfileModel();
 
@@ -77,21 +89,43 @@
         profile = await _db.GetProfile();
     }
 
-    private async Task InsertProfile() {
-        ProfileModel p = new ProfileModel(newProfile.Email, newProfile.Username, newProfile.City, newProfile.State,newProfile.SchoolName,
-            newProfile.PasswordHash)
-        {
-            Email = newProfile.Email,
-            City = newProfile.City,
-            Username = newProfile.Username,
-            State = newProfile.State,
-            SchoolName = newProfile.SchoolName,
-            PasswordHash = newProfile.PasswordHash
+    //private string passwordTemp1, passwordTemp2;
 
-        };
-        Console.WriteLine($"Profile email: {p.Email}");
+    private string confirmPass = "Confirm Password";
+
+
+    private async Task CheckPasswords() {
+        if (passwordTemp1 == passwordTemp2) {
+            await InsertProfile();
+        }else {
+            confirmPass = "**Passwords must match**";
+            passwordTemp2 = "";
+        }
+    }
+    
+    
+    private async Task InsertProfile() {
         
-        await _db.InsertProfile(p);
+            newProfile.Email = localEmail;
+            newProfile.Username = localUserName;
+            newProfile.City = localCity;
+            newProfile.State = localState;
+            newProfile.SchoolName = localSchoolName;
+            ProfileModel p = new ProfileModel(newProfile.Email, newProfile.Username, newProfile.City, newProfile.State,newProfile.SchoolName,
+                passwordTemp1)
+            {
+                Email = newProfile.Email,
+                City = newProfile.City,
+                Username = newProfile.Username,
+                State = newProfile.State,
+                SchoolName = newProfile.SchoolName,
+                PasswordHash = passwordTemp1
+
+            };
+            
+            Console.WriteLine($"Profile email: {p.Email}");
+        
+            await _db.InsertProfile(p);   
     }
 
 }
