--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Mat Matchmaker</a>
+            <img src="Logo.png" alt="Logo" width="70" height="45">
+            <a class="navbar-brand" href="">Mat Matchmaker</a>
     </div>
 </div>
 
