--- a/BlazorApp/Components/Layout/NavMenu.razor.css
+++ b/BlazorApp/Components/Layout/NavMenu.razor.css
@@ -121,3 +121,8 @@
         overflow-y: auto;
     }
 }
+.centered-image {
+    display: flex;
+    justify-content: left;
+    text-align: left;
+}
