--- a/BlazorApp/Components/Pages/Landing.razor
+++ b/BlazorApp/Components/Pages/Landing.razor
@@ -5,6 +5,9 @@
 <div class="background-image">
 <div class="login-signup d-flex justify-content-center align-items-center text-center">
     <div class="container">
+        <div class="centered-image">
+            <img src="Logo.png" alt="Logo" width="300" height="200">
+        </div>
         <h1 class="display-4 text-white">Welcome to Mat Matchmaker</h1>
         <h3 class="text-white">Ready to get started?</h3>
         <p class="lead text-white">Log in with an existing account or create a new account.</p>
