login redirects to roster now

--- a/BlazorApp/Components/Pages/Login.razor
+++ b/BlazorApp/Components/Pages/Login.razor
@@ -122,7 +122,7 @@
             
             
             
-            NavigationManager.NavigateTo("/Test");
+            NavigationManager.NavigateTo("/Roster");
         }
         else
         {
