update landing page

--- a/BlazorApp/Components/Pages/Dashboard.razor
+++ b/BlazorApp/Components/Pages/Dashboard.razor
@@ -11,7 +11,7 @@
                 <nav class="flex-column">
                     <div class="header">
                         <img src="Mizzou.jpg" alt="Profile Picture" class="profile-picture" />
-                        <h1>Welcome Coach Blank!</h1>
+                        <h1>Welcome Coach [Name]!</h1>
                     </div>
                     <div class="box">
                         <h1>Upcoming Event</h1>
