--- a/BlazorApp/Components/Pages/Landing.razor
+++ b/BlazorApp/Components/Pages/Landing.razor
@@ -3,13 +3,57 @@
 
 <PageTitle>Home</PageTitle>
 <div class="background-image">
+    <div class="container">
+      <div class="container__left">
+        <div class="content">
+          <h1>WRESTLING MEETS<br />MADE EASIER.</h1>
+          <p>
+            Welcome to Mat Matchmaker, the platform for youth wrestling management.
+            Schedule wrestling meets, invite other schools, generate matches, and keep 
+            track of your events, all in one place.
+            Simply input your roster and a few details, and we'll handle the rest!
+          </p>
+          <div class="btns">
+            <button class="learn__more">Learn More</button>
+          </div>
+        </div>
+      </div>
+      <div class="container__right">
+        <form>
+          <h4>Ready to get started?</h4>
+          <div class="form__group">
+            <label for="email">Email</label>
+            <input
+              type="text"
+              name="email"
+              id="email"
+              placeholder="Enter your email"
+            />
+          </div>
+          <div class="form__group">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" placeholder="Enter your password" />
+          </div>
+          <button type="submit">Login</button>
+           <p>Don't have an account? <a href="@("/SignUp")">Click here</a> to sign up.</p>
+        </form>
+      </div>
+    </div>
+</div>
+
+@*<div class="background-image">
 <div class="login-signup d-flex justify-content-center align-items-center text-center">
     <div class="container">
         <h1 class="display-4 text-white">Welcome to Mat Matchmaker</h1>
+        <h3 class="text-white">Managing your wrestling meets just got a whole lot easier</h3>
+        <p class="text-white">
+            Schedule wrestling meets, invite other schools, and create match ups <br>
+            Just input your roster and we'll handle the rest! 
+        </p>
         <h3 class="text-white">Ready to get started?</h3>
         <p class="lead text-white">Log in with an existing account or create a new account.</p>
         <a href="Home" class="btn btn-primary">Log In</a>
         <a href="SignUp" class="btn btn-primary">Sign Up</a>
     </div>
 </div>
-</div>
+</div>*@
