--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -15,6 +15,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Dashboard" Match="NavLinkMatch.All">
+                <span class="bi bi-grid-icon" aria-hidden="true"></span> Dashboard
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Roster">
                 <span class="bi bi-table-icon" aria-hidden="true"></span> Roster
             </NavLink>
