--- a/BlazorApp/Components/Layout/HeaderLayout.razor.css
+++ b/BlazorApp/Components/Layout/HeaderLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .top-row {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #040d32 70%);
+    background-image: linear-gradient(180deg, #0E88AE 0%, #022733 90%);
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
