--- a/BlazorApp/Components/Pages/Dashboard.razor.css
+++ b/BlazorApp/Components/Pages/Dashboard.razor.css
@@ -37,7 +37,7 @@
 }
 
 .blue-background {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #040d32 70%);
+    background-image: linear-gradient(180deg, #0E88AE 0%, #022733 70%);
 }
 
 .box {
@@ -82,7 +82,7 @@
     right: 1rem;
     border: 1px solid rgba(255, 255, 255, 0.79);
     background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") no-repeat center/1.75rem rgba(255, 255, 255, 0.1);
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #040d32 70%);
+    background-image: linear-gradient(180deg, #0E88AE 0%, #022733 70%);
 }
 
 .eventmenu-toggler:checked {
