--- a/BlazorApp/Components/Pages/Dashboard.razor.css
+++ b/BlazorApp/Components/Pages/Dashboard.razor.css
@@ -31,15 +31,13 @@
 }
 
 .grid-item {
-    /*background-color: #f9f9f9;*/
+    background-color: #ddd;
     padding: 20px;
     border-radius: 5px;
-    border: 3px solid #0e88ae;
 }
 
 .blue-background {
-    background-image: linear-gradient(180deg, #0e88ae 0%, #040d32 70%);
-
+    background-image: linear-gradient(180deg, #0E88AE 0%, #022733 70%);
 }
 
 .box {
@@ -50,27 +48,27 @@
 }
 
 .box h1 {
-    color: #FFEE74;
+    color: #c8c333;
     text-decoration: underline;
 }
 
 .box h2 {
-    color: #ffffff;
+    color: #d7d7d7;
     font-size: 25px;
 }
 
 .box h3{
-    color:#ffffff;
+    color:#d7d7d7;
     font-style: italic;
     font-size: 20px;
 }
 
 .calendar-box {
-    margin-top: 20px;
-    border: 3px solid #0e88ae; 
-    padding: 20px; 
-    border-radius: 5px; 
-    background-color: #f9f9f9; 
+    margin-top: 20px; /* Adjust spacing between grid and calendar */
+    border: 1px solid #ddd; /* Example border */
+    padding: 20px; /* Example padding */
+    border-radius: 5px; /* Example border radius */
+    background-color: #f9f9f9; /* Example background color */
 }
 
 .eventmenu-toggler {
@@ -121,7 +119,7 @@
 }
 
 .bi-chat-icon {
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" viewBox="0 0 16 16"><path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15"/></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15"/></svg>');
 }
 
 .nav-item {
