--- a/BlazorApp/Components/Layout/LandingLayout.razor.css
+++ b/BlazorApp/Components/Layout/LandingLayout.razor.css
@@ -14,7 +14,9 @@ main {
 }
 
 .top-row {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #040d32 70%);
+    /*background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #040d32 70%);
+     */
+    background-color: #022733;
     border-bottom: 1px solid #000000;
     justify-content: flex-end;
     height: 3.5rem;
