--- a/BlazorApp/Components/Layout/MainLayout.razor.css
+++ b/BlazorApp/Components/Layout/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, #0e88ae 0%, #033C4F 70%);
+    background-image: linear-gradient(180deg, #0E88AE 0%, #022733 90%);
 }
 
 .profile_toggler{
