--- a/BlazorApp/Components/Pages/Event.razor.css
+++ b/BlazorApp/Components/Pages/Event.razor.css
@@ -1,14 +1,48 @@
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    #display: none; 
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 0;
+}
+
+.dropdown input:focus + .dropdown-content {
+    display: block;
+}
+
+.dropdown-content button {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    border: none;
+    background: none;
+}
+
+.dropdown-content button:hover {
+    background-color: #f1f1f1;
+}
+
 .text_input{
     border: solid;
-    border-color: rgb(183, 183, 183)
+    border-color: rgb(183, 183, 183);
     border-radius: 50px;
 }
 
 th, td{
-    height: 25px;
+    height: 15px;
     border: solid;
     border-left: none;
     border-right: none;
-    
-    border-color: #636464;
+
+    border-color: #EDEDED;
 }
